# cowcli

./: .gitignore  Cargo.toml  README.md
cowapi/: Cargo.toml
cowapi/src/: lib.rs
cowbin/: Cargo.toml
cowbin/src/: main.rs
